[apache/helix] -- Updated code to be build compatible with JDK-8. (#2650)
We will release codebase to be build with JDK-8. We will continue to release the Open source Helix on Java 11 and this PR is for backward compatibility.